# bitig

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.superpowers/brainstorm/50552-1778966027/content/: findings-and-report.html  method-picker.html  nav-ia.html  visual-direction.html
.superpowers/brainstorm/50552-1778966027/state/: server-info
design/: audit-2026-06-03.md  forensic-lab.md
src/bitig/: case_run.py  cases.py  provenance.py  recipes.py  result.py  runner.py  signatures.py
src/bitig/cli/: __init__.py  case_cmd.py  classify_cmd.py
src/bitig/features/: lexical_diversity.py
src/bitig/forensic/: metrics.py  verbal_scale.py
src/bitig/gui/: app.py  case_layout.py  filepicker.py  layout.py  state.py
src/bitig/gui/pages/case/: __init__.py  _helpers.py  evidence.py  findings.py  landing.py  method.py  report.py  run.py
src/bitig/gui/widgets/: __init__.py  recipe_drawer.py
src/bitig/methods/: bayesian.py  cluster.py  consensus.py  imposters.py  reduce.py  zeta.py
src/bitig/methods/delta/: eder.py
src/bitig/preprocess/: cache.py
src/bitig/report/: case_report.py  context.py  scalars.py
src/bitig/report/templates/: forensic.html.j2  research.html.j2
tests/: test_case_run.py  test_cases.py  test_param_targets.py  test_provenance.py  test_recipes.py  test_result.py  test_runner_variants.py  test_signatures.py
tests/cli/: test_case_cmd.py  test_classify_cmd.py
tests/features/: test_lexical_diversity.py
tests/forensic/: test_pan_harness.py  test_verbal_scale.py
tests/gui/: test_case_helpers.py  test_case_pages_import.py  test_state.py
tests/methods/: test_bayesian_guard.py  test_consensus.py  test_imposters.py  test_optional_deps.py  test_zeta.py
tests/methods/delta/: test_eder.py
tests/preprocess/: test_cache.py  test_pipeline.py
tests/report/: test_case_report.py  test_scalars.py
