[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bitig"
dynamic = ["version"]
description = "Next-generation computational stylometry — a Python replacement for R's Stylo."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [{ name = "Fatih Bozdağ", email = "fbozdag1989@gmail.com" }]
keywords = ["stylometry", "authorship", "corpus-linguistics", "digital-humanities", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15",
    "pyphen>=0.14",
    "scikit-learn>=1.4",
    "spacy>=3.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "textstat>=0.7",
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "pyyaml>=6",
    "pydantic>=2",
    "jinja2>=3.1",
    "joblib>=1.3",
]

[project.optional-dependencies]
# UMAP + HDBSCAN are heavy numba / C-extension wheels imported only lazily by
# the reduce/cluster methods. Keeping them out of the base deps means a build
# break on a new Python doesn't sink installability for users who only touch
# Delta / PCA / Zeta. Install with `bitig[cluster]`.
cluster = ["umap-learn>=0.5", "hdbscan>=0.8"]
bayesian = ["pymc>=5.10", "arviz>=0.17"]
embeddings = ["sentence-transformers>=2.6", "torch>=2.2"]
viz = ["plotly>=5.20", "kaleido>=0.2.1", "ete3>=3.1.3"]
interactive = ["plotly>=5.20"]
reports = ["weasyprint>=61"]
gui = [
    "nicegui>=2",
    "pywebview>=5",
]
turkish = [
    # spacy-stanza 1.0.4 (its latest release) caps stanza at <1.7.0, so stanza
    # must stay in that window; 1.6.x is the newest spacy-stanza can load.
    "spacy-stanza>=1.0.4",
    "stanza>=1.6,<1.7",
]
multilang = [
    "bitig[turkish]",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
    # The reduce/cluster method tests exercise UMAP + HDBSCAN, so the dev/CI
    # environment installs the cluster extra even though base install doesn't.
    "bitig[cluster]",
]

[project.scripts]
bitig = "bitig.cli:app"

[project.urls]
Homepage = "https://github.com/fatihbozdag/bitig"
Documentation = "https://fatihbozdag.github.io/bitig/"
Source = "https://github.com/fatihbozdag/bitig"
Issues = "https://github.com/fatihbozdag/bitig/issues"

[tool.hatch.version]
path = "src/bitig/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bitig"]

[tool.hatch.build.targets.sdist]
include = ["src/bitig", "tests", "docs", "README.md", "LICENSE", "CITATION.cff"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "N",                # pep8-naming
]
ignore = ["E501"]       # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N806"]
# Language-specific modules intentionally contain non-ASCII characters (Turkish ı, German ß,
# Spanish/French accents). Suppress "ambiguous character" warnings in these locations.
"src/bitig/languages/readability_tr.py" = ["RUF001", "RUF002", "RUF003"]
"src/bitig/languages/readability_de.py" = ["RUF001", "RUF002", "RUF003"]
"src/bitig/languages/readability_es.py" = ["RUF001", "RUF002", "RUF003"]
"src/bitig/languages/readability_fr.py" = ["RUF001", "RUF002", "RUF003"]
"tests/languages/test_readability_tr.py" = ["RUF001", "RUF002", "RUF003"]
"tests/languages/test_readability_de.py" = ["RUF001", "RUF002", "RUF003"]
"tests/languages/test_readability_es.py" = ["RUF001", "RUF002", "RUF003"]
"tests/languages/test_readability_fr.py" = ["RUF001", "RUF002", "RUF003"]
"tests/integration/test_turkish_end_to_end.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "bitig.*"
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "spacy: marks tests that require a spaCy model download",
    "integration: end-to-end tests that run real subprocesses",
]

[tool.coverage.run]
source = ["src/bitig"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
precision = 1
